syntax = "proto3";

package app.view.v1;

option go_package = "./;v1";


message ListHomeMoRequest {
  string category_name = 1;
  int32 page_index = 2;
  int32 page_size = 3;
}

// message Owner {
//     string name = 1;
//     string face = 2;
//     uint32 fans = 3;
// }

message FeedComicMo {
    int32 id = 1;
    string title = 2;
    string authors = 3;
    string status = 4;
    string cover = 5;
    string types = 6;
    int32 last_updatetime = 7;
    int32 num = 8;
}

// message VideoMo {
//     string id = 1;
//     string vid = 2;
//     string title = 3;
//     string tname = 4;
//     string url = 5;
//     string cover = 6;
//     uint32 pubdate = 7;
//     string desc = 8;
//     uint32 view = 9;
//     uint32 duration = 10;
//     Owner owner = 11;
//     uint32 reply = 12;
//     uint32 favorite = 13;
//     uint32 like = 14;
//     uint32 coin = 15;
//     uint32 share = 16;
//     string create_time = 17; // TODO 怎么是字符串?
//     uint32 size = 18;
// }

message BannerMo {
    string id = 1;
    uint32 sticky = 2;
    string type = 3;
    string title = 4;
    string subtitle = 5;
    string url = 6;
    string cover = 7;
    string create_time = 8;
}

message CategoryMo {
    string name = 1;
    uint32 count = 2;
}

message ListHomeMoResponse {
    repeated BannerMo banner_list = 1;
    repeated CategoryMo category_list = 2;
    repeated FeedComicMo comic_list = 3;
}

message ListComicDetailRequest {
    repeated int32 comic_ids = 1;
}

message ListComicDetailResponse {
    repeated ComicDetail comics = 1;
}

message Chapter {
    int32 ChapterId = 1;
    string ChapterTitle = 2;
    int32 Updatetime = 3;
    int32 Filesize = 4;
    int32 ChapterOrder = 5;
}

message Chapters {
    string Title = 1;
    repeated Chapter Data = 2;
}

message ComicDetail {
    int32 Id = 1;
    string Title = 2;
    int32 Direction = 3;
    int32 Islong = 4;
    string Cover = 5;
    string Description = 6;
    int32 LastUpdatetime = 7;
    string LastUpdateChapterName = 8;
    string FirstLetter = 9;
    string ComicPy = 10;
    int32 HotNum = 11;
    int32 HitNum = 12;
    int32 LastUpdateChapterId = 13;
    int32 SubscribeNum = 14;

    string authors = 15;
    string status = 16;
    string types = 17;

    repeated Chapters Chapters = 18;
}

message ListComicChapterDetailRequest {
    int32 comic_id = 1;
    int32 chapter_id = 2;
}

message ListComicChapterDetailResponse {
    int32 chapter_id = 1;
    int32 comic_id = 2;
    string title = 3;
    int32 chapter_order = 4;
    int32 direction = 5;
    repeated string page_url = 6;
    int32 picnum = 7;
    int32 comment_count = 8;
}

service AppviewService {
    rpc ListHomeMo(ListHomeMoRequest) returns (ListHomeMoResponse);
    rpc ListComicDetail (ListComicDetailRequest) returns (ListComicDetailResponse);
    rpc ListComicChapterDetail(ListComicChapterDetailRequest) returns(ListComicChapterDetailResponse);
}