syntax = "proto3";

package comic.v1;

option go_package = './;v1';

message ComicDetail {
    int64 Id = 1;
    string Title = 2;
    int64 Direction = 3;
    int64 Islong = 4;
    string Cover = 5;
    string Description = 6;
    int64 LastUpdatetime = 7;
    string LastUpdateChapterName = 8;
    string FirstLetter = 9;
    string ComicPy = 10;
    int64 HotNum = 11;
    int64 HitNum = 12;
    int64 LastUpdateChapterId = 13;
    int64 SubscribeNum = 14;
}

message ComicCategoryDetail {
    int64 id = 1;
    string title = 2;
    string authors = 3;
    string status = 4;
    string cover = 5;
    string types = 6;
    int64 last_updatetime = 7;
    int64 num = 8;
}

message ComicCategoryFilterItem {
    uint32 tag_id = 1;
    string tag_name = 2;
}

message ComicCategoryFilter {
    string title = 1;
    repeated ComicCategoryFilterItem items = 2;
}

message ComicSpecial {
    int64 id = 1;
    string title = 2;
    string short_title = 3;
    int64 create_time = 4;
    string small_cover = 5;
    int64 page_type = 6;
    int64 sort = 7;
    string page_url = 8;
}

message ListComicDetailRequest {
    repeated int64 comic_ids = 1;
}

message ListComicDetailResponse {
    repeated ComicDetail comics = 1;
}


message ListComicCategoryDetailRequest {
    string type = 1; // TODO: 更改为tag_ids
    int32 sort = 2; // 0:人气排序 1:更新排序 2:feed
    int32 limit = 3;
    int32 offset = 4;
}

message ListComicCategoryDetailResponse {
    repeated ComicCategoryDetail details = 1;
}


message ListComicCategoryFilterRequest {

}



message ListComicCategoryFilterResponse {
    repeated ComicCategoryFilter filters = 1;
}

message ListComicSpecialRequest {
    int64 offset = 1;
    int64 limit = 2;
}

message ListComicSpecialResponse {
    // 按照专题创建时间降序
    repeated ComicSpecial ComicSpecials = 1 ;
}

message ListCategoryComicDetailRequest {
    repeated int32 comic_ids = 1;
}

message ListCategoryComicDetailResponse {
    repeated ComicCategoryDetail comics = 1;
}

message ListComicChapterRequest {
    int32 comic_id = 1;
}

message ChapterDetail {
    int32 Chapterid = 1;
    string Chaptertitle = 2;
    int32 Updatetime = 3;
    int32 Filesize = 4;
    int32 Chapterorder = 5;
    string Title = 6;
    int32 ComicId = 7;
    int32 Direction = 8;
    string PageUrl = 9;
    int32 Picnum = 10;
    int32 CommentCount = 11;
}

message ListComicChapterResponse {
    repeated ChapterDetail chapters = 1;
}

service ComicService {
    rpc ListComicDetail (ListComicDetailRequest) returns (ListComicDetailResponse);
    rpc ListCategoryComicDetail (ListCategoryComicDetailRequest) returns (ListCategoryComicDetailResponse);

    rpc ListComicCategoryDetail (ListComicCategoryDetailRequest) returns (ListComicCategoryDetailResponse);
    rpc ListComicCategoryFilter(ListComicCategoryFilterRequest) returns(ListComicCategoryFilterResponse);
    
    rpc ListComicSpecial(ListComicSpecialRequest) returns(ListComicSpecialResponse);

    rpc ListComicChapter(ListComicChapterRequest) returns(ListComicChapterResponse);
}

